# reinforcement-learning

./: README.md  dqn.yml  main.py  pyproject.toml
PracticeScripts/: 06_ppo1.py  06_ppo_BiPed.py  06_ppo_InvPend.py  06_ppo_Pusher.py  06_ppo_Reacher.py  reinforce_state1.py
logs/dqn/SpaceInvadersNoFrameskip-v4_1/: 0.monitor.csv  evaluations.npz
logs/dqn/SpaceInvadersNoFrameskip-v4_1/SpaceInvadersNoFrameskip-v4/: args.yml  command.txt  config.yml
logs/dqn/SpaceInvadersNoFrameskip-v4_2/: 0.monitor.csv  evaluations.npz
logs/dqn/SpaceInvadersNoFrameskip-v4_2/SpaceInvadersNoFrameskip-v4/: args.yml
scripts/: 01_SBPPO.py  02_Qlearn.py  04_reinforce.py  05_a2c.py  06_ppo.py  unit3.ipynb  unit4.py
